<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" layout="@layout/activity_header" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="11.0">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/tv_update_username" android:background="@mipmap/user_xhd" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" />
        <EditText android:textSize="15.0sp" android:textColor="#ff333333" android:textColorHint="#ffcccccc" android:layout_gravity="center" android:id="@id/et_update_newpass" android:background="@mipmap/con_password_xhd" android:padding="5.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/user_update_newpass" android:inputType="textPassword" />
        <EditText android:textSize="15.0sp" android:textColor="#ff333333" android:textColorHint="#ffcccccc" android:layout_gravity="center" android:id="@id/et_update_phonenum" android:background="@mipmap/con_password_xhd" android:padding="5.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/user_hint_phone" />
        <LinearLayout android:layout_gravity="center" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/re_okpass_hint">
            <EditText android:textSize="15.0sp" android:textColor="#ff333333" android:textColorHint="#ffcccccc" android:id="@id/et_update_code" android:background="@mipmap/ver_code_xhd" android:padding="5.0dip" android:hint="@string/re_verify_hint" android:layout_weight="4.0" style="@style/style_width_and_height_wrap" />
            <TextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_update_code" android:background="@mipmap/get_ver_code_xhd" android:layout_marginLeft="10.0dip" android:text="@string/re_getverify_hint" android:layout_weight="1.0" style="@style/style_width_and_height_wrap" />
        </LinearLayout>
        <Button android:textSize="22.0sp" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/but_update_submit" android:background="@mipmap/confirm_xhd" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/user_update_submit" />
    </LinearLayout>
</LinearLayout>