<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_width_and_height_match"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/style_width_match_height_wrap"
        android:layout_weight="4.0" />

    <LinearLayout
        style="@style/style_width_match_height_wrap"
        android:layout_weight="2.0"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@id/username"
            style="@style/style_width_match_height_wrap"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:background="@mipmap/login_eidt"
            android:completionThreshold="1"
            android:hint="@string/user_hint"
            android:padding="5.0dip"
            android:singleLine="true"
            android:textColor="#ff333333"
            android:textColorHint="#ffcccccc"
            android:textSize="15.0sp" />

        <EditText
            android:id="@id/password"
            style="@style/style_width_match_height_wrap"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@mipmap/login_eidt"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:padding="5.0dip"
            android:paddingLeft="10.0dip"
            android:textColor="#ff333333"
            android:textColorHint="#ffcccccc"
            android:textSize="15.0sp" />

        <RelativeLayout
            style="@style/style_width_match_height_wrap"
            android:layout_marginRight="20.0dip">

            <CheckBox
                android:id="@id/rem_cbox"
                style="@style/style_width_and_height_wrap"
                android:layout_alignParentLeft="true"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:text="@string/rem_pass"
                android:textColor="#ffcccccc"
                android:textSize="28.0sp" />

            <TextView
                android:id="@id/tv_notknow_pass"
                style="@style/style_width_and_height_wrap"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20.0dip"
                android:text="@string/notknow_pass"
                android:textColor="#ffcccccc" />
        </RelativeLayout>

        <Button
            android:id="@id/login_but"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@mipmap/login_but"
            android:text="@string/login_but"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="#ffe96536" />
    </LinearLayout>
</LinearLayout>