<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" layout="@layout/activity_header" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="11.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/forget_hint_1" />
            <EditText android:gravity="center_vertical" android:id="@id/et_forget_username" android:background="@mipmap/new_title_xhd" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:maxLength="10" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/forget_hint_3" />
            <EditText android:gravity="center_vertical" android:id="@id/et_forget_newpass" android:background="@mipmap/new_title_xhd" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:maxLength="10" android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/forget_hint_4" />
            <EditText android:gravity="center_vertical" android:id="@id/et_forget_oknewpass" android:background="@mipmap/new_title_xhd" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:maxLength="10" android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/forget_hint_2" />
            <EditText android:gravity="center_vertical" android:id="@id/et_forget_phonenum" android:background="@mipmap/new_title_xhd" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:maxLength="11" android:inputType="phone" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" style="@style/style_width_match_height_wrap">
            <EditText android:gravity="center_vertical" android:id="@id/et_forget_code" android:background="@mipmap/new_title_xhd" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/re_verify_hint" android:maxLength="6" android:layout_weight="5.0" android:inputType="phone" />
            <TextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_forget_code" android:background="@mipmap/get_ver_code_xhd" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/re_getverify_hint" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="50.0dip">
            <TextView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/but_forget_submit" android:background="@mipmap/logoff_xhd" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/forget_hint_5" android:layout_weight="2.0" />
            <TextView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>