<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ffffffff" android:scrollbars="vertical" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:id="@id/leave_header" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" layout="@layout/activity_header" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="11.0">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/leave_new_que_title" />
                <EditText android:gravity="center_vertical" android:id="@id/et_new_que_title" android:background="@mipmap/new_title_xhd" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:maxHeight="200.0dip" android:scrollHorizontally="true" android:singleLine="true" android:maxLength="100" android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ll_new_que_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/leave_new_que_content" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip">
                    <EditText android:id="@id/et_new_que_content" android:background="@mipmap/new_title_xhd" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxHeight="300.0dip" android:scrollHorizontally="false" android:singleLine="true" android:maxLength="100" android:layout_weight="20.0" android:inputType="textMultiLine" />
                    <Button android:textColor="#ffeeeeee" android:id="@id/bt_new_que_audio" android:background="@mipmap/audio_fasong_bg" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/input_audio_button" android:layout_weight="20.0" />
                    <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                    <Button android:textColor="#00000000" android:id="@id/bt_add_audio" android:background="@mipmap/addaudio" android:layout_width="22.5dip" android:layout_height="22.5dip" android:layout_marginRight="2.0dip" android:text="添加" />
                </LinearLayout>
            </LinearLayout>
            <HorizontalScrollView android:id="@id/hs_add_new_que_img" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="200.0dip">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_add_que_pic" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </HorizontalScrollView>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/but_new_que_submit" android:background="@mipmap/ensure_xhd" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="提交问题" android:layout_weight="2.0" />
                <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>