<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <include
        android:id="@id/leave_header"
        layout="@layout/activity_header"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="10.0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80.0dip"
            android:background="@mipmap/user_line_xhd"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@id/tv_user_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20.0dip"
                android:text="用户名"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@id/rl_update_password"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@mipmap/mod_password_line_xhd">

            <ImageView
                android:id="@id/iv_update_password_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:background="@mipmap/password_icon_xhd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:layout_toRightOf="@id/iv_update_password_img"
                android:text="@string/user_update_password" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/rl_user_que"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@mipmap/mod_password_line_xhd">

            <ImageView
                android:id="@id/iv_user_que_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:background="@mipmap/my_question_icon_xhd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:layout_toRightOf="@id/iv_user_que_img"
                android:text="@string/user_user_que" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/rl_about"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@mipmap/mod_password_line_xhd">

            <ImageView
                android:id="@id/iv_about_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:background="@mipmap/us_icon_xhd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:layout_toRightOf="@id/iv_about_img"
                android:text="@string/user_about" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="50.0dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />

            <Button
                android:id="@id/but_exit_login"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="2.0"
                android:background="@mipmap/logoff_xhd"
                android:text="退出登录"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@id/leave_footer"
        layout="@layout/activity_footer"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />
</LinearLayout>